@@ -8,7 +8,11 @@ Changelog
 - Add 'connect_method = vagrant' to the environment if you want to deploy
   into vagrant and use the 'vagrant ssh' invocation.
 
-- Update internal buildout and setuptools versions.
+- Update internal buildout, setuptools, and execnet versions.
+
+- Add 'update_method = rsync' to provide a simple, non-VCS specific way
+  of shipping batou definitions to the remote side. This does not perform
+  any conflict resolution and is mainly intended for use with vagrant.
 
 
 1.0b33 (2015-01-28)
